--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -94,8 +94,8 @@ http {
       }
 
       location /api-omapi/ {
-        proxy_pass https://omapi.osinfra.cn/;
-        # proxy_pass https://omapi.test.osinfra.cn/;
+        # proxy_pass https://omapi.osinfra.cn/;
+        proxy_pass https://omapi.test.osinfra.cn/;
       }
       location /api-dsapi/ {
         proxy_pass https://dsapi.osinfra.cn/;
