fix：切换登陆环境

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-VITE_COOKIE_DOMAIN = .openeuler.org
+VITE_COOKIE_DOMAIN = .opengauss.org
 VITE_IS_DEV = false
 
-VITE_LOGIN_ORIGIN = https://id.openeuler.org
+VITE_LOGIN_ORIGIN = https://id.opengauss.org
