fix:替换后台地址

--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -100,11 +100,8 @@ http {
       location /api-dsapi/ {
         proxy_pass https://dsapi.osinfra.cn/;
       }
-      location /api-meeting/ {
-        proxy_pass https://meetings.openeuler.org/;
-      }
       location /api-edit/ {
-        proxy_pass https://easyeditor.openeuler.org/api/;
+        proxy_pass https://easyeditor.opengauss.org/api/;
         # proxy_pass https://easyeditor.test.osinfra.cn/api/;
       }
       root /usr/share/nginx/html;
